# comgeo

./: .gitignore  pyproject.toml  setup.py  setup.sh  test.sh
comgeo/: __init__.py  constant.py
comgeo/core/: vector.py  vertex.py
comgeo/core/graph/: __init__.py  base.py
comgeo/core/mesh/: base.py  basic.py  hybrid.py  quad_mesh.py  triangle_mesh.py
comgeo/core/polygon/: base.py  quad.py  triangle.py
comgeo/core/shape/: circle.py  ellipse.py
comgeo/core/utils/: error.py
comgeo/core/vector/: __init__.py  base.py  vector2d.py  vector3d.py
comgeo/core/vertex/: __init__.py  base.py  vertex2d.py  vertex3d.py
comgeo/decorator/: error.py
data/ellipsoid/: analysis.py  generate.py  generate.sh  generate_simple.py  pc_extract.py  upload.py  view.py  view.sh
dev/lmr/: run.py  run_graph.py  run_m500.py
example/mesh/: 2d.py  2dpc.py
example/shape/: circumcircle.py
test/: test_vector2d.py  test_vertex2d.py
test/graph/: test_graph.py
test/mesh/: test_base.py  test_hybrid.py
test/polygon/: test_functional.py  test_polygon.py  test_quad.py  test_triangle.py
test/shape/: test_circle.py  test_ellipse.py
test/vector/: test_vector.py  test_vector2d.py  test_vector3d.py  test_vector_edge_case.py
test/vertex/: __init__.py  test_vertex.py  test_vertex2d.py  test_vertex3d.py
test_script/graph/: test_core.sh
test_script/mesh/: test_core.sh
test_script/polygon/: test_core.sh  test_functional.sh
test_script/shape/: test_core.sh
test_script/vector/: test_core.sh
test_script/vertex/: test_core.sh  test_functional_triplets_check.sh
(+27 files in other folders)
