[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.10", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comgeo"
version = "0.1.7"
authors = [
  { name="KhoiDOO", email="khoido8899@gmail.com" }, # Replace with your actual name and email
]
description = "A Python package for Quad Mesh operations using C++ with Pybind11."
readme = "README.md" # Create a README.md file later
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "seaborn",
    "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/KhoiDOO/computational-geometry" # Replace with your project URL
"Bug Tracker" = "https://github.com/KhoiDOO/computational-geometry/issues" # Replace with your bug tracker URL